--- a/Lembrete_tags_HTML.html
+++ b/Lembrete_tags_HTML.html
@@ -48,8 +48,50 @@
     <!-- Cria um bloco novo-->
     <div></div>
 
-    <!-- Cria um bloco novo-->
-     Possivel nova tag
+    <!-- Criando Negrito-->
+     <p> Colocando <b>Negrito</b> </p>
+     <p> Colocando <strong>importante</strong> </p>
+
+     <!-- Palavra italico-->
+     <p> Colocando <i>italico</i> </p>
+     <p> Colocando <em>italico</em> </p>
+
+     <!-- Palavra sublinhado -->
+     <p> Colocando <u>sublinhado</u> </p>
+
+     <!-- Palavra risca a palavra -->
+     <p> Colocando <s>risca</s> </p>
+
+     <!-- Palavra marcar: coloca um marca texto em tudo que tem nele -->
+     <p> Colocando <mark>risca</mark> </p>
+
+     <!-- Texto pre-formatado (aparece tudo que esta escrito) -->
+     <pre>
+        print('Hello, World')
+     </pre>
+
+       <!-- Texto pre-formatado -->
+       <pre>
+        print('Hello, World')
+     </pre>
+
+       <!-- Texto code: deixa tudo dentro em formato de codigo -->
+       <p> Colocando <code>risca</code> </p>
+
+       <!-- Texto como citação de algo -->
+       <p> Colocando <blockquote>"Alguma citação de livro"</blockquote> </p>
+
+       <!-- Texto como citação de algo -->
+       <p> Colocando <blockquote>"Alguma citação de livro"</blockquote> </p>
+
+       <!-- colocar uma palavra como se fosse sobre algo como 2² -->
+       <p>  2<sup>2</sup> </p>
+
+         <!-- colocar uma palavra como se fosse sobre algo como H2O -->
+         <p>  H<sub>2</sub>O </p>
+
+    
+
 
 </body>
 </html>
